...
        switch dataSource {
        case .garmin:
            return "Garmin Connect™"
        case .strava:
            return "Strava"
        case .appleHealth:
            return "Apple Health"
        case .unbound:
            return ""
        }
    }

    /// 獲取資料來源的圖示名稱
...
