...
                        HStack {
                            Image(systemName: "list.bullet.rectangle.portrait")
                                .foregroundColor(.accentColor)
                            Text(L10n.EditTarget.browseDatabase.localized)
                        }
                    }
                    .accessibilityIdentifier("AddSupportingTarget_BrowseDatabaseButton")
                }

                Section(header: Text(L10n.EditTarget.raceInfo.localized)) {
                    TextField(L10n.EditTarget.raceName.localized, text: $viewModel.raceName)
                        .textContentType(.name)
                        .accessibilityIdentifier("race_name_input")
...
